# project_1_my_cuda_vllm

./: .gitignore  CMakeLists.txt  GPU_FULL_AUDIT.md  GPU_GARBAGE_DIAGNOSIS.md  bug.md  long_prompt.txt  py_baseline.py  qwen2.5_test.py  test.sh
debug/: debug_layer_diff.py  debug_positions.py  test_matmul  test_matmul.cu
demo/: CMakeLists.txt  chat.cpp  main.cpp  model_struct.txt
docs/: architecture.md  benchmark_comparison.md  int8_weight_only_quantized_plan.md  model_guide.md  operator_guide.md  resume_project.md
profile/: README.md
profile/results/baseline/: latest
profile/scripts/: export_profile.sh  run_baseline.sh  run_ncu.sh  run_nsys.sh
sys/include/base/: Buffer.h  DeviceController.h  base.h  cuda_stream.h
sys/include/model/: buffer_type.h  config.h  llama3.h  model.h  raw_model_data.h
sys/include/op/: add.h  embedding.h  encode.h  layer.h  matmul.h  mha.h  rmsnorm.h  rope.h  softmax.h  swiglu.h
sys/include/profile/: nvtx_utils.h  profiler.h
sys/include/sampler/: argmax_sampler.h  gpu_argmax.h  sampler.h  topk_sampler.h
sys/include/tensor/: tensor.h
sys/src/base/: Buffer.cpp  DeviceController.cpp  Status.cpp  cuda_stream.cpp  unicode.cpp
sys/src/model/: llama3.cpp  model.cpp  raw_model_data.cpp
sys/src/op/: add.cpp  embedding.cpp  encode.cpp  layer.cpp  matmul.cpp  mha.cpp  rmsnorm.cpp  rope.cpp  softmax.cpp  swiglu.cpp
sys/src/op/kernel/: kernel_interface.cpp  kernel_interface.h
sys/src/op/kernel/cpu/: add_kernel.cpp  add_kernel.h  emb_kernel.cpp  emb_kernel.h  matmul_kernel.cpp  matmul_kernel.h  mha_kernel.cpp  mha_kernel.h  rmsnorm_kernel.cpp  rmsnorm_kernel.h  rope_kernel.cpp  rope_kernel.h  softmax_kernel.cpp  softmax_kernel.h  swiglu_kernel.cpp  swiglu_kernel.h
sys/src/op/kernel/gpu/: add_kernel.cu  add_kernel.cuh  emb_kernel.cu  emb_kernel.cuh  matmul_int8_kernel.cu  matmul_int8_kernel.cuh  matmul_kernel.cu  matmul_kernel.cuh  matmul_kernel_optimized.cu  matmul_kernel_optimized.cuh  mha_baseline_kernel.cu  mha_baseline_kernel.cuh  mha_kernel.cu  mha_kernel.cuh  rmsnorm_kernel.cu  rmsnorm_kernel.cuh  rope_kernel.cu  rope_kernel.cuh  softmax_kernel.cu  softmax_kernel.cuh  swiglu_kernel.cu  swiglu_kernel.cuh
sys/src/profile/: profiler.cpp
sys/src/sampler/: argmax_sampler.cpp  gpu_argmax.cu  topk_sampler.cpp
sys/src/tensor/: tensor.cpp
test/: CMakeLists.txt  test_add_op.cpp  test_buffer.cpp  test_device_controller.cpp  test_layer.cpp  test_main.cpp  test_tensor.cpp
tools/: export_from_structure.py  export_llama3.py  export_qwen3.py  model_qwen3.py  parse_model_structure.py  quantize_model.py  qwen_test.py
